# WikiWalker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  curl.c  jsontest.cpp  make.sh  pointertest.cpp  test.md
CMakeModules/: README.txt
doc/: CMakeLists.txt  Doxyfile  TODO.md  design.md  design.odg  design.txt  jsonformat.md  misc.txt  shortTermTodo.md
inc/: Article.h  ArticleCollection.h  BoostPoCommandLineParser.h  CacheJsonToArticleConverter.h  CommandLineParserBase.h  CommandLineParserUtils.h  CurlUrlCreator.h  CurlWikiGrabber.h  DataOutputBase.h  GetoptCommandLineParser.h  JsonSerializer.h  StringUtils.h  ToGraphvizWriter.h  ToJsonWriter.h  Walker.h  WalkerException.h  WikiWalker.h  WikimediaApi.h  WikimediaJsonToArticleConverter.h  config.h.in  version.h.in
lib/: CMakeLists.txt  README.md
lib/LUrlParser/: CMakeLists.txt
lib/jsoncpp/: CMakeLists.txt
lib/wikiwalker/inc/: Article.h  libwwconfigure.h.in
sandbox/: jsontest.cpp  make.sh
src/: ACommandLineParser.h  ADataOutput.h  Article.cpp  Article.h  ArticleCollection.cpp  ArticleCollection.h  BoostPoCommandLineParser.cpp  BoostPoCommandLineParser.h  CMakeLists.txt  CacheJsonToArticleConverter.cpp  CacheJsonToArticleConverter.h  CommandLineParser.h  CommandLineParserBase.cpp  CommandLineParserBase.h  CommandLineParserUtils.cpp  CurlUrlCreator.cpp  CurlUrlCreator.h  CurlWikiGrabber.cpp  CurlWikiGrabber.h  DataOutputBase.cpp  DataOutputBase.h  GetoptCommandLineParser.cpp  GetoptCommandLineParser.h  JsonCacheSource.cpp  JsonCacheSource.h  JsonSerializer.cpp  JsonToArticleConverter.cpp  JsonToArticleConverter.h  Makefile  SourceBase.h  StringUtils.cpp  ToGraphvizWriter.cpp  ToGraphvizWriter.h  ToJsonWriter.cpp  ToJsonWriter.h  Walker.cpp  Walker.h  WalkerException.cpp  WalkerException.h  WikiWalker.cpp  (+11 more)
test/: ArticleTests.cpp  CMakeLists.txt  CacheJsonToArticleConverterTests.cpp  CollectionMergeTests.cpp  CollectionTests.cpp  CurlUrlCreatorTests.cpp  JsonDeserializerTests.cpp  JsonSerializeDeserializeTests.cpp  JsonSerializerTests.cpp  JsonToArticleConverterTests.cpp  Makefile  SerializerTestDefines.h  StringUtilsTest.cpp  ToGraphvizWriterTests.cpp  ToJsonWriterTests.cpp  WikimediaJsonToArticleConverterTests.cpp  main.cpp
util/: CMakeLists.txt  FilterAnalyzedArticles.cpp
